# Polysync

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Polysync.ptaddon  README.md  plugin.luau  plugin.server.luau
include/polysync/: build.h  cli.h  definitions.h  error.h  exit.h  git.h  http.h  io.h  log.h  memory.h  polysync.h  scan.h  server.h  setup.h  sleep.h  socket.h  string.h  sync.h  transform.h  tree.h  types.h  watcher.h
include/polysync/transform/: require.h
source/: build.c  cli.c  definitions.c  exit.c  git.c  http.c  io.c  log.c  main.c  memory.c  scan.c  server.c  setup.c  sleep.c  socket.c  string.c  sync.c  transform.c  tree.c  watcher.c
source/transform/: require.c
